# librum

./: MIGRATION.md  README.md  meson.build  meson_options.txt  resources.qrc
.github/workflows/: test.yml
resources/data/: default_shortcuts.json
src/: CMakeLists.txt  dependency_injection.hpp  main.cpp  meson.build
src/adapters/: CMakeLists.txt  meson.build
src/adapters/controllers/: ai_tools_controller.cpp  ai_tools_controller.hpp  app_info_controller.cpp  app_info_controller.hpp  authentication_controller.cpp  authentication_controller.hpp  dictionary_controller.cpp  dictionary_controller.hpp  external_opened_book_controller.cpp  external_opened_book_controller.hpp  opened_book_controller.cpp  opened_book_controller.hpp
src/adapters/core/: document_access.cpp  document_access.hpp  document_position.hpp  document_search_options.cpp  document_search_options.hpp  document_searcher.cpp  document_searcher.hpp  page_renderer.cpp  page_renderer.hpp
src/adapters/data_models/bookmarks_model/: bookmarks_model.cpp  bookmarks_model.hpp  bookmarks_proxy_model.cpp
src/adapters/data_models/toc_model/: filtered_toc_model.cpp  filtered_toc_model.hpp  toc_item.cpp  toc_item.hpp  toc_model.cpp  toc_model.hpp
src/adapters/gateways/: ai_tools_gateway.cpp  ai_tools_gateway.hpp
src/adapters/interfaces/controllers/: i_ai_tools_controller.hpp  i_app_info_controller.hpp  i_authentication_controller.hpp  i_dictionary_controller.hpp  i_opened_book_controller.hpp
src/adapters/interfaces/core/: i_document_access.hpp  i_document_searcher.hpp  i_page_renderer.hpp
src/adapters/interfaces/persistance/: i_ai_tools_access.hpp
src/application/: CMakeLists.txt  meson.build
src/application/common/enums/: error_code.hpp  setting_keys.hpp
src/application/core/: metadata_extractor.cpp  metadata_extractor.hpp  mupdf_document_access.cpp  mupdf_document_access.hpp  mupdf_document_searcher.cpp  mupdf_document_searcher.hpp  mupdf_page_renderer.cpp  mupdf_page_renderer.hpp  page_generator.hpp
src/application/core/utils/: fz_utils.hpp  mupdf_search_options.hpp
src/application/interfaces/gateways/: i_ai_tools_gateway.hpp
src/application/interfaces/services/: i_ai_tools_service.hpp  i_authentication_service.hpp  i_opened_book_service.hpp
src/application/interfaces/utility/: i_book_getter.hpp
src/application/managers/: library_storage_manager.hpp
src/application/services/: ai_tools_service.cpp  ai_tools_service.hpp  authentication_service.cpp  authentication_service.hpp  opened_book_service.cpp  opened_book_service.hpp  user_service.cpp
src/application/utility/: string_utils.hpp
src/domain/: meson.build
src/infrastructure/: CMakeLists.txt  meson.build
src/infrastructure/data/: endpoints.hpp
src/infrastructure/persistance/: ai_tools_access.cpp  ai_tools_access.hpp
src/presentation/: CMakeLists.txt  IconSheet.qml  meson.build
src/presentation/desktop/: qmlSourcesDesktop.qrc
src/presentation/desktop/homePage/: MBookDetailsPopup.qml  MHomePage.qml
src/presentation/desktop/homePage/folderSidebar/: MAddFolderPopup.qml  MFolderSidebar.qml  MMoveToFolderPopup.qml  MSelectIconPopup.qml
src/presentation/desktop/modules/CppElements/: document.cpp  document.hpp  document_view.cpp  document_view.hpp  page.cpp  page.hpp  page_view.cpp  page_view.hpp  test_rect.cpp  test_rect.hpp
src/presentation/desktop/modules/CustomComponents/: MAlertBox.qml  MBaseListItem.qml
src/presentation/desktop/modules/CustomComponents/comboBox/: ComboBoxLogic.js  MComboBox.qml  MComboBoxPopup.qml
src/presentation/desktop/readingPage/: MBookmarkItem.qml  MBookmarksSidebar.qml  MChapterSidebar.qml  MDictionaryPopup.qml  MDocumentView.qml  MExplanationPopup.qml  MExternalReadingPage.qml  MReadingPage.qml  MSelectionOptionsPopup.qml  MTranslationPopup.qml
src/presentation/desktop/readingPage/externalReadingToolbar/: MExternalReadingOptionsPopup.qml  MExternalReadingToolBar.qml
src/presentation/desktop/readingPage/readingSearchbar/: MReadingSearchbar.qml  MReadingSearchbarOptionsPopup.qml
src/presentation/desktop/readingPage/readingToolbar/: MReadingOptionsPopup.qml  MReadingToolBar.qml
src/presentation/desktop/settings/shortcutsPage/: MShortcutsPage.qml
src/presentation/homePage/folderSidebar/: MAddFolderPopup.qml  MFolderSidebar.qml  MMoveToFolderPopup.qml  MSelectIconPopup.qml
src/presentation/loginPage/: MLoginPage.qml
src/presentation/modules/CustomComponents/: MAlertBox.qml
tests/: meson.build
