# Adapters library meson.build

adapters_sources = [
  'controllers/authentication_controller.cpp',
  'controllers/free_books_controller.cpp',
  'controllers/library_controller.cpp',
  'controllers/user_controller.cpp',
  'controllers/settings_controller.cpp',
  'controllers/app_info_controller.cpp',
  'controllers/book_controller.cpp',
  'controllers/page_controller.cpp',
  'controllers/dictionary_controller.cpp',
  'controllers/ai_explanation_controller.cpp',
  'controllers/folder_controller.cpp',
  'controllers/external_book_controller.cpp',
  'controllers/tools_controller.cpp',
  'gateways/user_storage_gateway.cpp',
  'gateways/authentication_gateway.cpp',
  'gateways/free_books_storage_gateway.cpp',
  'gateways/library_storage_gateway.cpp',
  'gateways/app_info_gateway.cpp',
  'gateways/dictionary_gateway.cpp',
  'gateways/ai_explanation_gateway.cpp',
  'gateways/folder_storage_gateway.cpp',
  'data_models/library_model/library_model.cpp',
  'data_models/library_model/library_proxy_model.cpp',
  'data_models/free_books_model/free_books_model.cpp',
  'data_models/user_tags_model/user_tags_model.cpp',
  'data_models/shortcuts_model/shortcuts_model.cpp',
  'data_models/shortcuts_model/shortcuts_proxy_model.cpp',
  'data_models/bookmarks_model/bookmarks_model.cpp',
  'data_models/bookmarks_model/bookmarks_proxy_model.cpp',
  'data_models/folders_model/folders_model.cpp',
  'data_models/folders_model/folders_proxy_model.cpp',
  'data_models/icon_model/icon_model.cpp',
  'data_models/icon_model/icon_proxy_model.cpp',
  'data_models/book_title_model/book_title_model.cpp',
  'data_models/book_title_model/book_title_proxy_model.cpp',
]

adapters_headers = [
  'interfaces/controllers/i_authentication_controller.hpp',
  'interfaces/controllers/i_free_books_controller.hpp',
  'interfaces/persistance/i_free_books_storage_access.hpp',
  'interfaces/controllers/i_library_controller.hpp',
  'interfaces/controllers/i_user_controller.hpp',
  'interfaces/controllers/i_settings_controller.hpp',
  'interfaces/controllers/i_page_controller.hpp',
  'interfaces/controllers/i_book_controller.hpp',
  'interfaces/controllers/i_app_info_controller.hpp',
  'interfaces/controllers/i_dictionary_controller.hpp',
  'interfaces/controllers/i_ai_explanation_controller.hpp',
  'interfaces/controllers/i_folder_controller.hpp',
  'interfaces/controllers/i_tools_controller.hpp',
  'interfaces/persistance/i_user_storage_access.hpp',
  'interfaces/persistance/i_library_storage_access.hpp',
  'interfaces/persistance/i_authentication_access.hpp',
  'interfaces/persistance/i_app_info_access.hpp',
  'interfaces/persistance/i_dictionary_access.hpp',
  'interfaces/persistance/i_ai_explanation_access.hpp',
  'interfaces/persistance/i_folder_storage_access.hpp',
  'controllers/authentication_controller.hpp',
  'controllers/free_books_controller.hpp',
  'controllers/library_controller.hpp',
  'controllers/user_controller.hpp',
  'controllers/settings_controller.hpp',
  'controllers/app_info_controller.hpp',
  'controllers/book_controller.hpp',
  'controllers/page_controller.hpp',
  'controllers/dictionary_controller.hpp',
  'controllers/ai_explanation_controller.hpp',
  'controllers/folder_controller.hpp',
  'controllers/external_book_controller.hpp',
  'controllers/tools_controller.hpp',
  'gateways/user_storage_gateway.hpp',
  'gateways/authentication_gateway.hpp',
  'gateways/free_books_storage_gateway.hpp',
  'gateways/library_storage_gateway.hpp',
  'gateways/app_info_gateway.hpp',
  'gateways/dictionary_gateway.hpp',
  'gateways/ai_explanation_gateway.hpp',
  'gateways/folder_storage_gateway.hpp',
  'DTOs/login_dto.hpp',
  'DTOs/register_dto.hpp',
  'DTOs/book_dto.hpp',
  'DTOs/tag_dto.hpp',
  'DTOs/highlight_dto.hpp',
  'DTOs/rectf_dto.hpp',
  'DTOs/word_definition_dto.hpp',
  'DTOs/folder_dto.hpp',
  'data_models/library_model/library_model.hpp',
  'data_models/library_model/library_proxy_model.hpp',
  'data_models/library_model/filter_request.hpp',
  'data_models/free_books_model/free_books_model.hpp',
  'data_models/user_tags_model/user_tags_model.hpp',
  'data_models/shortcuts_model/shortcuts_model.hpp',
  'data_models/shortcuts_model/shortcuts_proxy_model.hpp',
  'data_models/bookmarks_model/bookmarks_model.hpp',
  'data_models/bookmarks_model/bookmarks_proxy_model.hpp',
  'data_models/folders_model/folders_model.hpp',
  'data_models/folders_model/folders_proxy_model.hpp',
  'data_models/icon_model/icon_model.hpp',
  'data_models/icon_model/icon_proxy_model.hpp',
  'data_models/icon_model/icon_item.hpp',
  'data_models/book_title_model/book_title_model.hpp',
  'data_models/book_title_model/book_title_proxy_model.hpp',
]


# Headers that need MOC processing (have Q_OBJECT or Q_GADGET macro)
moc_headers = [
  'controllers/folder_controller.hpp',
  'controllers/authentication_controller.hpp',
  'controllers/page_controller.hpp',
  'controllers/dictionary_controller.hpp',
  'controllers/library_controller.hpp',
  'controllers/settings_controller.hpp',
  'controllers/external_book_controller.hpp',
  'controllers/user_controller.hpp',
  'controllers/free_books_controller.hpp',
  'controllers/app_info_controller.hpp',
  'controllers/book_controller.hpp',
  'controllers/ai_explanation_controller.hpp',
  'controllers/tools_controller.hpp',
  'gateways/app_info_gateway.hpp',
  'gateways/folder_storage_gateway.hpp',
  'gateways/user_storage_gateway.hpp',
  'gateways/free_books_storage_gateway.hpp',
  'gateways/dictionary_gateway.hpp',
  'gateways/authentication_gateway.hpp',
  'gateways/library_storage_gateway.hpp',
  'gateways/ai_explanation_gateway.hpp',
  'data_models/book_title_model/book_title_proxy_model.hpp',
  'data_models/book_title_model/book_title_model.hpp',
  'data_models/library_model/library_model.hpp',
  'data_models/library_model/library_proxy_model.hpp',
  'data_models/free_books_model/free_books_model.hpp',
  'data_models/bookmarks_model/bookmarks_model.hpp',
  'data_models/bookmarks_model/bookmarks_proxy_model.hpp',
  'data_models/folders_model/folders_proxy_model.hpp',
  'data_models/folders_model/folders_model.hpp',
  'data_models/user_tags_model/user_tags_model.hpp',
  'data_models/icon_model/icon_model.hpp',
  'data_models/icon_model/icon_proxy_model.hpp',
  'data_models/shortcuts_model/shortcuts_proxy_model.hpp',
  'data_models/shortcuts_model/shortcuts_model.hpp',
  'interfaces/controllers/i_library_controller.hpp',
  # DTOs with Q_GADGET macro
  'DTOs/book_dto.hpp',
  'DTOs/tag_dto.hpp',
  'DTOs/folder_dto.hpp',
  'DTOs/word_definition_dto.hpp',
  'interfaces/controllers/i_app_info_controller.hpp',
  'interfaces/controllers/i_settings_controller.hpp',
  'interfaces/controllers/i_user_controller.hpp',
  'interfaces/controllers/i_authentication_controller.hpp',
  'interfaces/controllers/i_page_controller.hpp',
  'interfaces/controllers/i_folder_controller.hpp',
  'interfaces/controllers/i_free_books_controller.hpp',
  'interfaces/controllers/i_dictionary_controller.hpp',
  'interfaces/controllers/i_tools_controller.hpp',
  'interfaces/controllers/i_book_controller.hpp',
  'interfaces/controllers/i_ai_explanation_controller.hpp',
  'interfaces/persistance/i_highlight_storage_access.hpp',
  'interfaces/persistance/i_ai_explanation_access.hpp',
  'interfaces/persistance/i_folder_storage_access.hpp',
  'interfaces/persistance/i_free_books_storage_access.hpp',
  'interfaces/persistance/i_dictionary_access.hpp',
  'interfaces/persistance/i_user_storage_access.hpp',
  'interfaces/persistance/i_authentication_access.hpp',
  'interfaces/persistance/i_library_storage_access.hpp',
  'interfaces/persistance/i_app_info_access.hpp',
]

# Qt6 preprocessing for headers with Q_OBJECT macro
qt6 = import('qt6')
qt6_preprocessed = qt6.preprocess(
  moc_headers: moc_headers,
  dependencies: qt6_dep,
)

# Include directories
adapters_inc = include_directories(
  '.',
  'interfaces/persistance',
  'interfaces/controllers',
  'controllers',
  'gateways',
  'DTOs',
  'data_models/library_model',
  'data_models/free_books_model',
  'data_models/user_tags_model',
  'data_models/shortcuts_model',
  'data_models/bookmarks_model',
  'data_models/folders_model',
  'data_models/icon_model',
  'data_models/book_title_model',
  'data_models',
)

# Compile definitions
adapters_defines = []
if get_option('buildtype').startswith('debug')
  adapters_defines += ['-DQT_QML_DEBUG']
endif

# Create static library
adapters_lib = static_library('adapters',
  sources: [
    adapters_sources,
    adapters_headers,
    qt6_preprocessed,
  ],
  include_directories: adapters_inc,
  dependencies: [
    domain_dep,
    application_dep,
    mupdf_dep,
    rapidfuzz_dep,
    qt6_dep,
  ],
  cpp_args: cpp_args + adapters_defines + ['-DADAPTERS_LIBRARY'],
  link_args: link_args,
  install: true,
  install_dir: get_option('libdir'),

)

# Export dependency for use in other subdirectories
adapters_dep = declare_dependency(
  include_directories: adapters_inc,
  compile_args: adapters_defines,
)
